@@ -1,46 +1,28 @@
 plugins {
-    kotlin("jvm") version "1.8.0"
-    id("org.jlleitschuh.gradle.ktlint") version "12.2.0"
-    id("io.gitlab.arturbosch.detekt") version "1.22.0"
+    kotlin("jvm") version "2.0.21"
+}
 
-}
-repositories {
-    mavenCentral()
-}
-detekt {
-    config = files("../detekt-config.yml")
-    buildUponDefaultConfig = true
-    reports {
-        html.required.set(true)
-        xml.required.set(true)
-    }
-}
 group = "org.example"
 version = "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
+    maven {
+        url = uri("https://company/com/maven2")
+    }
+    mavenLocal()
+    flatDir {
+        dirs("libs")
+    }
 }
 
 dependencies {
     testImplementation(kotlin("test"))
 }
-var mockKVersion = "1.13.4"
 
-dependencies {
-    testImplementation("io.mockk:mockk:$mockKVersion")
-}
-dependencies {
-    testImplementation(kotlin("test"))
-    testImplementation("io.kotest:kotest-runner-junit5:5.8.1")
-    testImplementation("io.kotest:kotest-assertions-core:5.8.1")
-    testImplementation("io.mockk:mockk:1.13.4")
-    testImplementation("org.junit.jupiter:junit-jupiter:5.10.1")
-    implementation ("org.slf4j:slf4j-api:1.7.32")
-    implementation ("ch.qos.logback:logback-classic:1.2.6")
-
-}
 tasks.test {
     useJUnitPlatform()
-    jvmArgs("-XX:+EnableDynamicAgentLoading")
+}
+kotlin {
+    jvmToolchain(21)
 }
